<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Moneta</string>
    <string name="dashboard">Dashboard</string>
    <string name="history">History</string>
    <string name="settings">Settings</string>
    <string name="earned_this_month">Earned this month</string>
    <string name="spent_this_month">Spent this month</string>
    <string name="rp_value">Rp %1$s</string>
    <string name="dollar_value">$ %1$s</string>
    <string name="recent_activities">Recent Activities</string>
    <string name="no_activities_yet">No activities yet</string>
    <string name="no_categories">No categories</string>
    <string name="current_balance">Current Balance</string>
    <string name="see_more">See more</string>
    <string name="personalization">Personalization</string>
    <string name="currency">Currency</string>
    <string name="categories">Categories</string>
    <string name="use_system_theme">Use system theme</string>
    <string name="dark_mode">Dark mode</string>
    <string name="add_category">Add category</string>
    <string name="usd_currency_label">USD ($)</string>
    <string name="idr_currency_label">IDR (Rp)</string>
    <string name="add_activity">Add Activity</string>
    <string name="amount">Amount</string>
    <string name="category">Category</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="note_optional">Note (Optional)</string>
    <string name="back">Back</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="amount_required">Please enter a valid amount</string>
    <string name="category_required">Please select a category</string>
    <string name="date_required">Please enter a valid date</string>
    <string name="time_required">Please enter a valid time</string>
    <string name="activity_detail">Activity Detail</string>
    <string name="edit_activity">Edit Activity</string>
    <string name="save">Save</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="income">Income</string>
    <string name="expense">Expense</string>
    <string name="note">Note</string>
    <string name="are_you_sure">Are you sure?</string>
    <string name="category_name">Name</string>
    <string name="select_icon">Icon</string>
    <string name="name_required">Please enter a name</string>
    <string name="category_detail">Category Detail</string>
    <string name="edit_category">Edit Category</string>
    <string name="type">Type</string>
    <string name="backup">Backup</string>
    <string name="export">Export</string>
    <string name="import_button">Import</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="backup_saved" tools:ignore="PluralsCandidate">Backup saved with %1$d activities</string>
    <string name="backup_export_failed">Couldn\'t save the backup. Please try again.</string>
    <string name="backup_read_failed">Couldn\'t read that file. Please try again.</string>
    <string name="backup_wrong_file">That file doesn\'t look like a Moneta backup. No data was changed.</string>
    <string name="backup_import_done" tools:ignore="PluralsCandidate">Done: %1$d added, %2$d skipped</string>
    <string name="backup_import_failed">Something went wrong. Your current data was not changed.</string>
    <string name="backup_preview_title">Import backup?</string>
    <string name="backup_preview" tools:ignore="PluralsCandidate">Found %1$d records in %2$s, using %3$d categories.</string>
    <string name="backup_keep_and_add">Keep my data and add on top</string>
    <string name="backup_delete_first">Delete everything first</string>
    <string name="backup_duplicate_warning">Importing the same file twice will create copies.</string>
    <string name="backup_replace_title">Delete everything?</string>
    <string name="backup_replace_confirm" tools:ignore="PluralsCandidate">This will delete your current %1$d records. This cannot be undone.</string>
    <string name="backup_currency_unknown">unknown currency</string>
    <string name="backup_currency_title">Switch currency?</string>
    <string name="backup_currency_switch">This backup was made in %1$s. Your phone is set to %2$s. Switch to %1$s to show it correctly?</string>
</resources>
